[gd_scene load_steps=32 format=3 uid="uid://d1dy8wdybrr7m"]

[ext_resource type="Script" path="res://08_SUBSCENES/Orbe/Teleporter/Teleporter_prefabs.gd" id="1_qf47g"]
[ext_resource type="Script" path="res://08_SUBSCENES/Tools/Scanning_effect.gd" id="2_jwtc3"]
[ext_resource type="Script" path="res://08_SUBSCENES/Orbe/Teleporter/Show_hide_contact.gd" id="3_2qp8n"]
[ext_resource type="Resource" uid="uid://bc0a7b7fylqn4" path="res://12_INVENTORY/Photo/Teleporter_photoData.tres" id="4_0y3qy"]
[ext_resource type="Script" path="res://08_SUBSCENES/Orbe/Orbe_Magnet.gd" id="4_626aq"]
[ext_resource type="Script" path="res://12_INVENTORY/Photo/Photo_data_element.gd" id="4_e00ki"]
[ext_resource type="Script" path="res://08_SUBSCENES/Orbe/Teleporter/Remover.gd" id="4_k2307"]
[ext_resource type="Script" path="res://08_SUBSCENES/Orbe/Orbe_Contact.gd" id="5_pryy3"]

[sub_resource type="GDScript" id="GDScript_jeye4"]
script/source = "extends Area3D
"

[sub_resource type="VisualShaderNodeFresnel" id="VisualShaderNodeFresnel_mw66r"]
default_input_values = [2, true, 3, 10.0]

[sub_resource type="VisualShader" id="VisualShader_vefdy"]
code = "shader_type spatial;
render_mode blend_mix, depth_draw_opaque, cull_back, diffuse_lambert, specular_schlick_ggx, unshaded;



"
graph_offset = Vector2(-164.667, 0)
flags/unshaded = true
nodes/fragment/2/node = SubResource("VisualShaderNodeFresnel_mw66r")
nodes/fragment/2/position = Vector2(14.2265, 134.785)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ypguf"]
render_priority = 0
shader = SubResource("VisualShader_vefdy")

[sub_resource type="Curve" id="Curve_khqj2"]
_data = [Vector2(0.00550964, 0.902674), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_as00d"]
curve = SubResource("Curve_khqj2")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1ke37"]
emission_shape = 1
emission_sphere_radius = 0.25
gravity = Vector3(0, 0, 0)
scale_min = 0.03
scale_max = 0.03
scale_curve = SubResource("CurveTexture_as00d")

[sub_resource type="BoxMesh" id="BoxMesh_pqfq1"]

[sub_resource type="PrismMesh" id="PrismMesh_m2ll2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fieuw"]
shading_mode = 0

[sub_resource type="BoxMesh" id="BoxMesh_1cn5w"]

[sub_resource type="SphereMesh" id="SphereMesh_12daw"]

[sub_resource type="SphereShape3D" id="SphereShape3D_skf8y"]
radius = 1.16933

[sub_resource type="SphereShape3D" id="SphereShape3D_fsn5p"]
radius = 0.117408

[sub_resource type="TorusMesh" id="TorusMesh_tvllk"]
inner_radius = 2.289
outer_radius = 1.5
rings = 32
ring_segments = 16

[sub_resource type="VisualShaderNodeColorParameter" id="VisualShaderNodeColorParameter_57a4m"]
parameter_name = "Light_color_ui"
qualifier = 1

[sub_resource type="VisualShaderNodeFloatConstant" id="VisualShaderNodeFloatConstant_ss4dw"]
constant = 0.4

[sub_resource type="VisualShaderNodeExpression" id="VisualShaderNodeExpression_0ppx4"]
size = Vector2(724.789, 654.559)
expression = "const float DITHER_THRESHOLDS[16] ={
		1.0 / 17.0, 9.0 / 17.0, 3.0 / 17.0, 11.0 / 17.0,
		13.0 / 17.0, 5.0 / 17.0, 15.0 / 17.0, 7.0 / 17.0,
		4.0 / 17.0, 12.0 / 17.0, 2.0 / 17.0, 10.0 / 17.0,
		16.0 / 17.0, 8.0 / 17.0, 14.0 / 17.0, 6.0 / 17.0
	};
	
vec2 uv = FRAGCOORD.xy * Size;
int index = (int(uv.x) % 4) * 4 + int(uv.y) % 4;
Dither_Node = In - DITHER_THRESHOLDS[index];"

[sub_resource type="VisualShaderNodeStep" id="VisualShaderNodeStep_8j6a1"]

[sub_resource type="VisualShaderNodeFloatConstant" id="VisualShaderNodeFloatConstant_j2ocp"]
constant = 0.814

[sub_resource type="VisualShader" id="VisualShader_2h3k6"]
code = "shader_type spatial;
render_mode blend_mix, depth_draw_opaque, cull_back, diffuse_lambert, specular_schlick_ggx, unshaded;

global uniform vec4 Light_color_ui : source_color;



void fragment() {
// ColorParameter:2
	vec4 n_out2p0 = Light_color_ui;


// FloatConstant:7
	float n_out7p0 = 0.814000;


// FloatConstant:3
	float n_out3p0 = 0.400000;


	float n_out4p0;
// Expression:4
	n_out4p0 = 0.0;
	{
		const float DITHER_THRESHOLDS[16] ={
				1.0 / 17.0, 9.0 / 17.0, 3.0 / 17.0, 11.0 / 17.0,
				13.0 / 17.0, 5.0 / 17.0, 15.0 / 17.0, 7.0 / 17.0,
				4.0 / 17.0, 12.0 / 17.0, 2.0 / 17.0, 10.0 / 17.0,
				16.0 / 17.0, 8.0 / 17.0, 14.0 / 17.0, 6.0 / 17.0
			};
			
		vec2 uv = FRAGCOORD.xy * n_out3p0;
		int index = (int(uv.x) % 4) * 4 + int(uv.y) % 4;
		n_out4p0 = n_out7p0 - DITHER_THRESHOLDS[index];
	}


// Step:6
	float n_out6p0 = step(n_out2p0.x, n_out4p0);


// Output:0
	ALBEDO = vec3(n_out2p0.xyz);
	ALPHA = n_out6p0;


}
"
graph_offset = Vector2(-2592.23, 392.193)
flags/unshaded = true
nodes/fragment/2/node = SubResource("VisualShaderNodeColorParameter_57a4m")
nodes/fragment/2/position = Vector2(-760, -40)
nodes/fragment/3/node = SubResource("VisualShaderNodeFloatConstant_ss4dw")
nodes/fragment/3/position = Vector2(-1380, 520)
nodes/fragment/4/node = SubResource("VisualShaderNodeExpression_0ppx4")
nodes/fragment/4/position = Vector2(-1200, 380)
nodes/fragment/4/size = Vector2(724.789, 654.559)
nodes/fragment/4/input_ports = "0,0,In;1,0,Size;"
nodes/fragment/4/output_ports = "0,0,Dither_Node;"
nodes/fragment/4/expression = "const float DITHER_THRESHOLDS[16] ={
		1.0 / 17.0, 9.0 / 17.0, 3.0 / 17.0, 11.0 / 17.0,
		13.0 / 17.0, 5.0 / 17.0, 15.0 / 17.0, 7.0 / 17.0,
		4.0 / 17.0, 12.0 / 17.0, 2.0 / 17.0, 10.0 / 17.0,
		16.0 / 17.0, 8.0 / 17.0, 14.0 / 17.0, 6.0 / 17.0
	};
	
vec2 uv = FRAGCOORD.xy * Size;
int index = (int(uv.x) % 4) * 4 + int(uv.y) % 4;
Dither_Node = In - DITHER_THRESHOLDS[index];"
nodes/fragment/6/node = SubResource("VisualShaderNodeStep_8j6a1")
nodes/fragment/6/position = Vector2(-351.825, 215.819)
nodes/fragment/7/node = SubResource("VisualShaderNodeFloatConstant_j2ocp")
nodes/fragment/7/position = Vector2(-1440, 360)
nodes/fragment/connections = PackedInt32Array(3, 0, 4, 1, 4, 0, 6, 1, 6, 0, 0, 1, 7, 0, 4, 0, 2, 0, 6, 0, 2, 0, 0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_of2nf"]
render_priority = 0
shader = SubResource("VisualShader_2h3k6")

[sub_resource type="TorusMesh" id="TorusMesh_rprlq"]
inner_radius = 2.546
outer_radius = 2.972
rings = 32
ring_segments = 16

[node name="Teleporter" type="Area3D"]
collision_layer = 6
collision_mask = 6
script = SubResource("GDScript_jeye4")

[node name="Teleporter" type="Node" parent="."]
script = ExtResource("1_qf47g")

[node name="Scanning_effect" type="Node" parent="."]
script = ExtResource("2_jwtc3")

[node name="Show_hide" type="Node" parent="." node_paths=PackedStringArray("Render_on", "Render_off")]
script = ExtResource("3_2qp8n")
Render_on = NodePath("../Render_off")
Render_off = NodePath("../Render_on")

[node name="Remover" type="Node" parent="."]
script = ExtResource("4_k2307")

[node name="Mirror_Particule" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00202631, -0.00481871, 0)
layers = 32768
material_override = SubResource("ShaderMaterial_ypguf")
gi_mode = 0
emitting = false
amount = 50
lifetime = 0.25
speed_scale = 2.0
fixed_fps = 12
process_material = SubResource("ParticleProcessMaterial_1ke37")
draw_pass_1 = SubResource("BoxMesh_pqfq1")

[node name="Render_on" type="Node3D" parent="."]
transform = Transform3D(0.511378, 0, 0, 0, 0.511378, 0, 0, 0, 0.511378, 0, 0, 0)

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Render_on"]
transform = Transform3D(0.123877, 0, 0, 0, 0.123877, 0, 0, 0, 0.123877, 0, 0, 0)
layers = 32768
mesh = SubResource("PrismMesh_m2ll2")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_fieuw")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Render_on"]
transform = Transform3D(0.0770516, 0.00960436, 0, -0.0615601, 0.0120213, 0, 0, 0, 0.0153868, 0.0830994, -0.0836298, 0)
layers = 32768
mesh = SubResource("BoxMesh_1cn5w")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_fieuw")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Render_on/MeshInstance3D4"]
transform = Transform3D(0.487528, -0.389509, 0, 2.4966, 3.12486, 0, 0, 0, 3.99972, 0.561219, 0.0423644, 0)
layers = 32768
mesh = SubResource("SphereMesh_12daw")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_fieuw")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Render_on"]
transform = Transform3D(-0.00139423, -0.0153853, 0, 0.0986137, -0.000217519, 0, 0, 0, 0.0153868, -0.00102393, 0.0847997, 0)
layers = 32768
mesh = SubResource("BoxMesh_1cn5w")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_fieuw")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Render_on/MeshInstance3D5"]
transform = Transform3D(0.487528, -0.389509, 0, 2.4966, 3.12486, 0, 0, 0, 3.99972, 0.561219, 0.0423644, 0)
layers = 32768
mesh = SubResource("SphereMesh_12daw")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_fieuw")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="Render_on"]
transform = Transform3D(-0.0682914, 0.0107822, 0.00264169, -0.0616903, -0.0107967, 0.00524897, 0.0354568, 0.00198222, 0.0142206, -0.0800687, -0.0843242, 0)
layers = 32768
mesh = SubResource("BoxMesh_1cn5w")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_fieuw")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Render_on/MeshInstance3D6"]
transform = Transform3D(0.487528, -0.389509, 0, 2.4966, 3.12486, 0, 0, 0, 3.99972, 0.561219, 0.0423644, 0)
layers = 32768
mesh = SubResource("SphereMesh_12daw")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_fieuw")

[node name="Render_off" type="Node3D" parent="."]
transform = Transform3D(0.511378, 0, 0, 0, 0.511378, 0, 0, 0, 0.511378, 0, 0, 0)
visible = false

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Render_off"]
transform = Transform3D(0.123877, 0, 0, 0, 0.123877, 0, 0, 0, 0.123877, 0, 0, 0)
layers = 32768
mesh = SubResource("PrismMesh_m2ll2")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_fieuw")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Render_off"]
transform = Transform3D(0.0770516, 0.00960436, 0, -0.0615601, 0.0120213, 0, 0, 0, 0.0153868, 0.0393169, -0.0467602, 0)
layers = 32768
mesh = SubResource("BoxMesh_1cn5w")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_fieuw")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Render_off/MeshInstance3D4"]
transform = Transform3D(0.487528, -0.389509, 0, 2.4966, 3.12486, 0, 0, 0, 3.99972, 0.561219, 0.0423644, 0)
layers = 32768
mesh = SubResource("SphereMesh_12daw")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_fieuw")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Render_off"]
transform = Transform3D(-0.00139423, -0.0153853, 0, 0.0986137, -0.000217519, 0, 0, 0, 0.0153868, -0.00102393, 0.0277671, 0)
layers = 32768
mesh = SubResource("BoxMesh_1cn5w")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_fieuw")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Render_off/MeshInstance3D5"]
transform = Transform3D(0.487528, -0.389509, 0, 2.4966, 3.12486, 0, 0, 0, 3.99972, 0.561219, 0.0423644, 0)
layers = 32768
mesh = SubResource("SphereMesh_12daw")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_fieuw")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="Render_off"]
transform = Transform3D(-0.0682914, 0.0107822, 0.00264169, -0.0616903, -0.0107967, 0.00524897, 0.0354568, 0.00198222, 0.0142206, -0.0391666, -0.0451503, 0)
layers = 32768
mesh = SubResource("BoxMesh_1cn5w")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_fieuw")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Render_off/MeshInstance3D6"]
transform = Transform3D(0.487528, -0.389509, 0, 2.4966, 3.12486, 0, 0, 0, 3.99972, 0.561219, 0.0423644, 0)
layers = 32768
mesh = SubResource("SphereMesh_12daw")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_fieuw")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_skf8y")

[node name="Area_take_it" type="Area3D" parent="."]
collision_layer = 6
collision_mask = 6

[node name="Photo_data" type="Node" parent="Area_take_it"]
script = ExtResource("4_e00ki")
photoData = ExtResource("4_0y3qy")

[node name="Orbe_Magnet" type="Node" parent="Area_take_it"]
script = ExtResource("4_626aq")
orbe_name = "Teleporter"

[node name="Orbe_Contact" type="Node" parent="Area_take_it"]
script = ExtResource("5_pryy3")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area_take_it"]
shape = SubResource("SphereShape3D_fsn5p")

[node name="teleporter_circle" type="MeshInstance3D" parent="."]
transform = Transform3D(0.0529083, -8.7878e-17, -6.44371e-15, -6.44371e-15, -2.1706e-10, -0.0529083, 9.3631e-16, 0.00496572, -2.31271e-09, 0, 0, 0)
visible = false
layers = 4
mesh = SubResource("TorusMesh_tvllk")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("ShaderMaterial_of2nf")

[node name="teleporter_circle_close" type="MeshInstance3D" parent="."]
transform = Transform3D(0.0529083, -8.7878e-17, -6.44371e-15, -6.44371e-15, -2.1706e-10, -0.0529083, 9.3631e-16, 0.00496572, -2.31271e-09, 0, 0, 0)
visible = false
layers = 4
mesh = SubResource("TorusMesh_rprlq")
skeleton = NodePath("../../..")
surface_material_override/0 = SubResource("ShaderMaterial_of2nf")

[connection signal="area_shape_entered" from="Area_take_it" to="Area_take_it/Orbe_Contact" method="_on_area_take_it_area_shape_entered"]
[connection signal="area_shape_exited" from="Area_take_it" to="Area_take_it/Photo_data" method="_on_area_take_it_area_shape_exited"]
[connection signal="area_shape_exited" from="Area_take_it" to="Area_take_it/Orbe_Contact" method="_on_area_take_it_area_shape_exited"]
[connection signal="scanner_effect_condition" from="Area_take_it/Photo_data" to="Scanning_effect" method="_on_photo_data_scanner_effect_condition"]
[connection signal="scanner_effect_value" from="Area_take_it/Photo_data" to="Scanning_effect" method="_on_photo_data_scanner_effect_value"]
[connection signal="magnet_end" from="Area_take_it/Orbe_Magnet" to="Teleporter" method="_on_orbe_magnet_magnet_end"]
[connection signal="delete_node" from="Area_take_it/Orbe_Contact" to="Remover" method="_on_orbe_contact_delete_node"]
[connection signal="player_contact" from="Area_take_it/Orbe_Contact" to="Show_hide" method="_on_orbe_contact_player_contact"]
